# fastfastapi

./: .goreleaser.yml  README.md  go.mod  main.go
.github/workflows/: auto-tag.yml  release.yml
cmd/ffa/: main.go
generator/: generator.go
generator/templates/: requirements.txt.tmpl
generator/templates/app/api/v1/routers/: items.py.tmpl  users.py.tmpl
generator/templates/app/core/: security.py.tmpl
generator/templates/app/models/: item.py.tmpl  user.py.tmpl
generator/templates/app/schemas/: item.py.tmpl  user.py.tmpl
generator/templates/app/services/: item_service.py.tmpl  user_service.py.tmpl
internal/cli/: cli.go
pypi/: README.md  pyproject.toml
pypi/fastfastapi/: __init__.py  _binary.py
tui/: tui.go
