[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fastfastapi"
dynamic = ["version"]
description = "Scaffold a production-ready FastAPI project in seconds"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = ["certifi"]
keywords = ["fastapi", "scaffold", "generator", "cli", "boilerplate"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Code Generators",
]

[project.scripts]
fastfastapi = "fastfastapi:main"
ffa = "fastfastapi:ffa"

[project.urls]
Homepage = "https://github.com/markryangarcia/fastfastapi"
Repository = "https://github.com/markryangarcia/fastfastapi"

[tool.setuptools.packages.find]
where = ["."]
include = ["fastfastapi*"]

[tool.setuptools.dynamic]
version = { file = "VERSION" }
